tests/architecture/fixtures/invalid/order-command-boundaries/browser-storage.ts
export const invalidOrderStorage = localStorage.getItem("nexoraxs.db.commerceOrders");
